src/BulletSharpPInvoke/Dynamics/TypedConstraint.cs

using SiliconStudio.Core.Mathematics;
using System;
using System.Runtime.InteropServices;
using System.Security;

namespace BulletSharp
{
    public enum TypedConstraintType
    {
        Point2Point = 3,
        Hinge,
        ConeTwist,
        D6,
        Slider,
        Contact,
        D6Spring,
        Gear,
        Max
    }

    public enum ConstraintParam
    {
        Erp = 1,
        StopErp,
        Cfm,
        StopCfm
    }

	public class JointFeedback
	{
		internal IntPtr _native;

		internal JointFeedback(IntPtr native)
		{
			_native = native;
		}

		public JointFeedback()
		{
			_native = btJointFeedback_new();
		}

        public Vector3 AppliedForceBodyA
		{
            get
            {
                Vector3 value;
                btJointFeedback_getAppliedForceBodyA(_native, out value);
                return value;
            }
			set { btJointFeedback_setAppliedForceBodyA(_native, ref value); }
		}

        public Vector3 AppliedForceBodyB
		{
            get
            {
                Vector3 value;
                btJointFeedback_getAppliedForceBodyB(_native, out value);
                return value;
            }
			set { btJointFeedback_setAppliedForceBodyB(_native, ref value); }
		}

        public Vector3 AppliedTorqueBodyA
		{
            get
            {
                Vector3 value;
                btJointFeedback_getAppliedTorqueBodyA(_native, out value);
                return value;
            }
			set { btJointFeedback_setAppliedTorqueBodyA(_native, ref value); }
		}

        public Vector3 AppliedTorqueBodyB
		{
            get
            {
                Vector3 value;
                btJointFeedback_getAppliedTorqueBodyB(_native, out value);
                return value;
            }
			set { btJointFeedback_setAppliedTorqueBodyB(_native, ref value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btJointFeedback_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~JointFeedback()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btJointFeedback_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btJointFeedback_getAppliedForceBodyA(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btJointFeedback_getAppliedForceBodyB(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btJointFeedback_getAppliedTorqueBodyA(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btJointFeedback_getAppliedTorqueBodyB(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btJointFeedback_setAppliedForceBodyA(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btJointFeedback_setAppliedForceBodyB(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
        static extern void btJointFeedback_setAppliedTorqueBodyA(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btJointFeedback_setAppliedTorqueBodyB(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btJointFeedback_delete(IntPtr obj);
	}

	public class TypedConstraint : IDisposable
	{
		public class ConstraintInfo1
		{
			internal IntPtr _native;

			internal ConstraintInfo1(IntPtr native)
			{
				_native = native;
			}

			public ConstraintInfo1()
			{
				_native = btTypedConstraint_btConstraintInfo1_new();
			}

			public int Nub
			{
				get { return btTypedConstraint_btConstraintInfo1_getNub(_native); }
				set { btTypedConstraint_btConstraintInfo1_setNub(_native, value); }
			}

			public int NumConstraintRows
			{
				get { return btTypedConstraint_btConstraintInfo1_getNumConstraintRows(_native); }
				set { btTypedConstraint_btConstraintInfo1_setNumConstraintRows(_native, value); }
			}

			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btTypedConstraint_btConstraintInfo1_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~ConstraintInfo1()
			{
				Dispose(false);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo1_new();
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern int btTypedConstraint_btConstraintInfo1_getNub(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern int btTypedConstraint_btConstraintInfo1_getNumConstraintRows(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo1_setNub(IntPtr obj, int value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo1_setNumConstraintRows(IntPtr obj, int value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo1_delete(IntPtr obj);
		}

		public class ConstraintInfo2
		{
			internal IntPtr _native;

			internal ConstraintInfo2(IntPtr native)
			{
				_native = native;
			}

			public ConstraintInfo2()
			{
				_native = btTypedConstraint_btConstraintInfo2_new();
			}
            /*
			public float Cfm
			{
				get { return btTypedConstraint_btConstraintInfo2_getCfm(_native); }
				set { btTypedConstraint_btConstraintInfo2_setCfm(_native, value._native); }
			}

			public float ConstraintError
			{
				get { return btTypedConstraint_btConstraintInfo2_getConstraintError(_native); }
				set { btTypedConstraint_btConstraintInfo2_setConstraintError(_native, value._native); }
			}
            */
			public float Damping
			{
				get { return btTypedConstraint_btConstraintInfo2_getDamping(_native); }
				set { btTypedConstraint_btConstraintInfo2_setDamping(_native, value); }
			}

			public float Erp
			{
				get { return btTypedConstraint_btConstraintInfo2_getErp(_native); }
				set { btTypedConstraint_btConstraintInfo2_setErp(_native, value); }
			}
            /*
			public int Findex
			{
				get { return btTypedConstraint_btConstraintInfo2_getFindex(_native); }
				set { btTypedConstraint_btConstraintInfo2_setFindex(_native, value._native); }
			}
            */
			public float Fps
			{
				get { return btTypedConstraint_btConstraintInfo2_getFps(_native); }
				set { btTypedConstraint_btConstraintInfo2_setFps(_native, value); }
			}
            /*
			public float J1angularAxis
			{
				get { return btTypedConstraint_btConstraintInfo2_getJ1angularAxis(_native); }
				set { btTypedConstraint_btConstraintInfo2_setJ1angularAxis(_native, value._native); }
			}

			public float J1linearAxis
			{
				get { return btTypedConstraint_btConstraintInfo2_getJ1linearAxis(_native); }
				set { btTypedConstraint_btConstraintInfo2_setJ1linearAxis(_native, value._native); }
			}

			public float J2angularAxis
			{
				get { return btTypedConstraint_btConstraintInfo2_getJ2angularAxis(_native); }
				set { btTypedConstraint_btConstraintInfo2_setJ2angularAxis(_native, value._native); }
			}

			public float J2linearAxis
			{
				get { return btTypedConstraint_btConstraintInfo2_getJ2linearAxis(_native); }
				set { btTypedConstraint_btConstraintInfo2_setJ2linearAxis(_native, value._native); }
			}

			public float LowerLimit
			{
				get { return btTypedConstraint_btConstraintInfo2_getLowerLimit(_native); }
				set { btTypedConstraint_btConstraintInfo2_setLowerLimit(_native, value._native); }
			}
            */
			public int NumIterations
			{
				get { return btTypedConstraint_btConstraintInfo2_getNumIterations(_native); }
				set { btTypedConstraint_btConstraintInfo2_setNumIterations(_native, value); }
			}

			public int Rowskip
			{
				get { return btTypedConstraint_btConstraintInfo2_getRowskip(_native); }
				set { btTypedConstraint_btConstraintInfo2_setRowskip(_native, value); }
			}
            /*
			public float UpperLimit
			{
				get { return btTypedConstraint_btConstraintInfo2_getUpperLimit(_native); }
				set { btTypedConstraint_btConstraintInfo2_setUpperLimit(_native, value._native); }
			}
            */
			public void Dispose()
			{
				Dispose(true);
				GC.SuppressFinalize(this);
			}

			protected virtual void Dispose(bool disposing)
			{
				if (_native != IntPtr.Zero)
				{
					btTypedConstraint_btConstraintInfo2_delete(_native);
					_native = IntPtr.Zero;
				}
			}

			~ConstraintInfo2()
			{
				Dispose(false);
			}

			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern IntPtr btTypedConstraint_btConstraintInfo2_new();

		    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btTypedConstraint_btConstraintInfo2_getDamping(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btTypedConstraint_btConstraintInfo2_getErp(IntPtr obj);

		    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern float btTypedConstraint_btConstraintInfo2_getFps(IntPtr obj);

		    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern int btTypedConstraint_btConstraintInfo2_getNumIterations(IntPtr obj);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern int btTypedConstraint_btConstraintInfo2_getRowskip(IntPtr obj);

		    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setDamping(IntPtr obj, float value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setErp(IntPtr obj, float value);

		    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setFps(IntPtr obj, float value);

		    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setNumIterations(IntPtr obj, int value);
			[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_setRowskip(IntPtr obj, int value);

		    [DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
			static extern void btTypedConstraint_btConstraintInfo2_delete(IntPtr obj);
		}

        internal IntPtr _native;
